more detail added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blurry Loading</title>
+    <title>Blurry Picture</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="main"></section>
-    <div class="loading_text">%0</div>
+    <section class="main_section"></section>
+    <div class="loading_num">%0</div>
     
 
     <script src="script.js"></script>
